--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,7 +7,7 @@ fact_caching_connection = ~/.ansible/cache
 fact_caching_timeout = 7200
 accelerate = False
 host_key_checking = False
-vault_password_file = secrets/vault_password
+#vault_password_file = secrets/vault_password
 roles_path = roles:../roles
 forks = 50
 
